[tool.poetry]
name = "user-crud-procedures"
version = "0.1.0"
description = ""
authors = ["Thiago Barros <bunbismuth@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
